--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                             </div>
 							
 							  <div class="education_item wow fadeInUp animated" data-line="S">
-                                <h3>کارشناسی مهندسی کامپیوتر</h3>
+                                <h3>کارشناسی مهندسی نرم افزار</h3>
                                 <h5>گرایش نرم افزار </h5>
-                                            <h4 class="subtitle">دانشگاه: پیام نور تهران  <label>دولتی</label></h4>
+                                            <h4 class="subtitle">دانشگاه: پیام نور ایلام  <label>دولتی</label></h4>
 
                             </div>
 
