--- a/en.html
+++ b/en.html
@@ -163,7 +163,7 @@
 
                             <div class="education_item wow fadeInUp animated" data-line="S">
                                 <h3>master degree in IT</h3>
-                                <h5>branch data security </h5>
+                                <h5>branch security </h5>
                                             <h4 class="subtitle">University: Payamnoor Tehran  </h4>
 
                             </div>
@@ -171,9 +171,9 @@
  <div class="education_inner_area " style="visibility : visible ; animation-name:fadeInUp">
 
                             <div class="education_item wow fadeInUp animated" data-line="S">
-                                <h3>Bachelor Copmuter</h3>
+                                <h3>Bachelor Software</h3>
                                 <h5>Branch Software</h5>
-                                            <h4 class="subtitle">University: Payamnoor Tehran </h4>
+                                            <h4 class="subtitle">University: Payamnoor Ilam </h4>
 
                             </div>
 
