--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
 
                             <div class="education_item wow fadeInUp animated" data-line="S">
-                                <h3>کارشناسی ارشد مهندسی ای تی</h3>
-                                <h5> گرایش امنیت </h5>
+                                <h3>کارشناسی ارشد مهندسی نرم افزار</h3>
+                                <h5> گرایش نرم افزار </h5>
                                             <h4 class="subtitle">دانشگاه: پیام نور تهران  <label>دولتی</label></h4>
 
                             </div>
@@ -171,7 +171,7 @@
 							  <div class="education_item wow fadeInUp animated" data-line="S">
                                 <h3>کارشناسی مهندسی کامپیوتر</h3>
                                 <h5>گرایش نرم افزار </h5>
-                                            <h4 class="subtitle">دانشگاه: پیام نور تهران  <label>دولتی</label></h4>
+                                            <h4 class="subtitle">دانشگاه: پیام نور ایلام  <label>دولتی</label></h4>
 
                             </div>
 
