--- a/en.html
+++ b/en.html
@@ -162,8 +162,8 @@
 
 
                             <div class="education_item wow fadeInUp animated" data-line="S">
-                                <h3>master degree in IT</h3>
-                                <h5>branch data security </h5>
+                                <h3>master degree in computer</h3>
+                                <h5>branch software </h5>
                                             <h4 class="subtitle">University: Payamnoor Tehran  </h4>
 
                             </div>
@@ -173,7 +173,7 @@
                             <div class="education_item wow fadeInUp animated" data-line="S">
                                 <h3>Bachelor Copmuter</h3>
                                 <h5>Branch Software</h5>
-                                            <h4 class="subtitle">University: Payamnoor Tehran </h4>
+                                            <h4 class="subtitle">University: Payamnoor Ilam </h4>
 
                             </div>
 
