--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <h4>
                             </h4>
                             <p>
-                            من برنامه نویسی رو با #c و sql شروع کردم و بعد به سمت asp و برنامه نویسی سرور رفتم که باعث شد به مبحث امنیت علاقه مند بشم و تحصیل در زمینه امنیت در مقطع ارشد رو شروع کنم. 
+                            من برنامه نویسی رو با #c و sql شروع کردم و بعد به سمت asp و برنامه نویسی سرور رفتم که باعث شد به مبحث امنیت علاقه مند بشم و تحصیل در مقطع ارشد و پژوهش در زمینه امنیت رو شروع کنم. 
 						   </p>
                             <div class="person_information">
                                 <ul>
