--- a/en.html
+++ b/en.html
@@ -107,7 +107,7 @@
                             <h4>
                             </h4>
                             <p>
-                        I started programing with c# and SQL and then ASP and server backend programing which made me interested in network and data security. now I'm getting my master in IT and data security.  
+                        I started programing with c# and SQL and then ASP and server backend programing which made me interested in network and data security. now I'm getting my master in computer software.  
 						 </p>
                             <div class="person_information">
                                 <ul>
